Add files via upload
Added Audit Logging and tab completer for Admin